--- a/index.html
+++ b/index.html
@@ -129,17 +129,7 @@ button:hover {
 	<button onclick="limparDados()" style="background: #555; margin-top: 5px;">Limpar Dados</button>
 	<div id="resultado"></div>
 	
-	<!-- Legenda do Semáforo -->
-	<div id="legenda-semaforo" style="margin-top: 20px; padding: 15px; background: #e6f1ff; border-radius: 8px;">
-		<h3 style="text-align: center; color: #CE0058;">Legenda do Semáforo</h3>
-		<ul style="list-style: none; padding: 0; text-align: left;">
-			<li style="margin-bottom: 5px;"><span style="display: inline-block; width: 15px; height: 15px; border-radius: 50%; background-color: #FF0000; margin-right: 10px;"></span>Vermelho - Crítico</li>
-			<li style="margin-bottom: 5px;"><span style="display: inline-block; width: 15px; height: 15px; border-radius: 50%; background-color: #FFC000; margin-right: 10px;"></span>Amarelo - Insatisfatório</li>
-			<li style="margin-bottom: 5px;"><span style="display: inline-block; width: 15px; height: 15px; border-radius: 50%; background-color: #92D050; margin-right: 10px;"></span>Verde Limão - Satisfatório</li>
-			<li style="margin-bottom: 5px;"><span style="display: inline-block; width: 15px; height: 15px; border-radius: 50%; background-color: #3C7D22; margin-right: 10px;"></span>Verde Oliva - Acima do Satisfatório</li>
-			<li style="margin-bottom: 5px;"><span style="display: inline-block; width: 15px; height: 15px; border-radius: 50%; background-color: #00B0F0; margin-right: 10px;"></span>Azul - Nota máxima</li>
-		</ul>
-	</div>
+
 <script>
 // Mantendo as classificações originais para que o usuário possa alterá-las depois
 const classificacoes = {
@@ -754,26 +744,34 @@ function calcular() {
 		    const semaforoHtml = criarSemaforo(notaArredondada);
 		    resultadoDiv.insertAdjacentHTML('beforeend', semaforoHtml);
 		    
-		    // Oculta a legenda estática após o cálculo
-		    document.getElementById('legenda-semaforo').style.display = 'none';
+		    // Adiciona a legenda abaixo do semáforo
+		    resultadoDiv.insertAdjacentHTML('beforeend', criarLegendaSemaforo());
 		}
 
-		function limparDados() {
-		    document.getElementById('curso').value = '';
-		    document.getElementById('horista').value = '';
-		    document.getElementById('parcial').value = '';
-		    document.getElementById('integral').value = '';
-		    document.getElementById('resultado').innerHTML = '';
-		    // Remove o semáforo se existir
-		    const semaforoContainer = document.querySelector('.semaforo-container');
-		    if (semaforoContainer) {
-		        semaforoContainer.remove();
-		    }
-		    // Mostra a legenda estática novamente
-		    document.getElementById('legenda-semaforo').style.display = 'block';
+			function limparDados() {
+			    document.getElementById('curso').value = '';
+			    document.getElementById('horista').value = '';
+			    document.getElementById('parcial').value = '';
+			    document.getElementById('integral').value = '';
+			    document.getElementById('resultado').innerHTML = '';
+			}
+
+		function criarLegendaSemaforo() {
+			return `
+				<div style="margin-top: 20px; padding: 15px; background: #e6f1ff; border-radius: 8px;">
+					<h3 style="text-align: center; color: #CE0058;">Legenda do Semáforo</h3>
+					<ul style="list-style: none; padding: 0; text-align: left;">
+						<li style="margin-bottom: 5px;"><span style="display: inline-block; width: 15px; height: 15px; border-radius: 50%; background-color: #FF0000; margin-right: 10px;"></span>Vermelho - Crítico</li>
+						<li style="margin-bottom: 5px;"><span style="display: inline-block; width: 15px; height: 15px; border-radius: 50%; background-color: #FFC000; margin-right: 10px;"></span>Amarelo - Insatisfatório</li>
+						<li style="margin-bottom: 5px;"><span style="display: inline-block; width: 15px; height: 15px; border-radius: 50%; background-color: #92D050; margin-right: 10px;"></span>Verde Limão - Satisfatório</li>
+						<li style="margin-bottom: 5px;"><span style="display: inline-block; width: 15px; height: 15px; border-radius: 50%; background-color: #3C7D22; margin-right: 10px;"></span>Verde Oliva - Acima do Satisfatório</li>
+						<li style="margin-bottom: 5px;"><span style="display: inline-block; width: 15px; height: 15px; border-radius: 50%; background-color: #00B0F0; margin-right: 10px;"></span>Azul - Nota máxima</li>
+					</ul>
+				</div>
+			`;
 		}
 
-	function criarSemaforo(notaArredondada) {
+		function criarSemaforo(notaArredondada) {
 	    // Cores padrão (apagadas)
 	    let cores = ["#444", "#444", "#444", "#444", "#444"];
 
@@ -873,13 +871,8 @@ function calcular() {
 
 	// Inicializa o semáforo vazio ao carregar a página
 		document.addEventListener('DOMContentLoaded', () => {
-		    // Remove o semáforo inicial se existir (pois ele será criado no cálculo)
-		    const semaforoContainer = document.querySelector('.semaforo-container');
-		    if (semaforoContainer) {
-		        semaforoContainer.remove();
-		    }
-		    // Garante que a legenda esteja visível ao carregar a página
-		    document.getElementById('legenda-semaforo').style.display = 'block';
+		    // Não é necessário inicializar o semáforo ou a legenda, pois eles são criados após o cálculo.
+		    // A div #resultado está vazia por padrão.
 		});
 	</script>
 	</body>
